--- a/flux.1-dev_jupyter.ipynb
+++ b/flux.1-dev_jupyter.ipynb
@@ -12,10 +12,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "VjYy0F2gZIPR",
-        "outputId": "1e9b28cf-5f15-4c26-ca3e-d4993f77d96d",
+        "outputId": "cf97da19-301b-423e-c97b-77e2f2290723",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -29,130 +29,20 @@
             "Cloning into '/content/TotoroUI'...\n",
             "remote: Enumerating objects: 14652, done.\u001b[K\n",
             "remote: Total 14652 (delta 0), reused 0 (delta 0), pack-reused 14652 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (14652/14652), 23.91 MiB | 9.44 MiB/s, done.\n",
-            "Resolving deltas: 100% (9819/9819), done.\n",
+            "Receiving objects: 100% (14652/14652), 21.13 MiB | 8.75 MiB/s, done.\n",
+            "Resolving deltas: 100% (9824/9824), done.\n",
             "/content/TotoroUI\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.7/16.7 MB\u001b[0m \u001b[31m46.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m906.5/906.5 MB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m39.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m26.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m33.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m10.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m63.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.2/61.2 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "torchaudio 2.5.1+cu124 requires torch==2.5.1, but you have torch 2.5.0 which is incompatible.\n",
-            "torchvision 0.20.1+cu124 requires torch==2.5.1, but you have torch 2.5.0 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mThe following additional packages will be installed:\n",
-            "  libaria2-0 libc-ares2\n",
-            "The following NEW packages will be installed:\n",
-            "  aria2 libaria2-0 libc-ares2\n",
-            "0 upgraded, 3 newly installed, 0 to remove and 19 not upgraded.\n",
-            "Need to get 1,513 kB of archives.\n",
-            "After this operation, 5,441 kB of additional disk space will be used.\n",
-            "Selecting previously unselected package libc-ares2:amd64.\n",
-            "(Reading database ... 124926 files and directories currently installed.)\n",
-            "Preparing to unpack .../libc-ares2_1.18.1-1ubuntu0.22.04.3_amd64.deb ...\n",
-            "Unpacking libc-ares2:amd64 (1.18.1-1ubuntu0.22.04.3) ...\n",
-            "Selecting previously unselected package libaria2-0:amd64.\n",
-            "Preparing to unpack .../libaria2-0_1.36.0-1_amd64.deb ...\n",
-            "Unpacking libaria2-0:amd64 (1.36.0-1) ...\n",
-            "Selecting previously unselected package aria2.\n",
-            "Preparing to unpack .../aria2_1.36.0-1_amd64.deb ...\n",
-            "Unpacking aria2 (1.36.0-1) ...\n",
-            "Setting up libc-ares2:amd64 (1.18.1-1ubuntu0.22.04.3) ...\n",
-            "Setting up libaria2-0:amd64 (1.36.0-1) ...\n",
-            "Setting up aria2 (1.36.0-1) ...\n",
-            "Processing triggers for man-db (2.10.2-1) ...\n",
-            "Processing triggers for libc-bin (2.35-0ubuntu3.8) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtcm_debug.so.1 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_5.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libumf.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_0.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libhwloc.so.15 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_loader.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtcm.so.1 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_level_zero.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbb.so.12 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_opencl.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc.so.2 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc_proxy.so.2 is not a symbolic link\n",
-            "\n",
-            " *** Download Progress Summary as of Thu Feb  6 23:28:37 2025 *** \n",
-            "=\n",
-            "[#0b95a9 9.5GiB/11GiB(86%) CN:16 DL:68MiB ETA:22s]\n",
-            "FILE: /content/TotoroUI/models/unet/flux1-dev-fp8.safetensors\n",
-            "-\n",
-            "\n",
-            "\u001b[0m\n",
-            "Download Results:\n",
-            "gid   |stat|avg speed  |path/URI\n",
-            "======+====+===========+=======================================================\n",
-            "0b95a9|\u001b[1;32mOK\u001b[0m  |   160MiB/s|/content/TotoroUI/models/unet/flux1-dev-fp8.safetensors\n",
-            "\n",
-            "Status Legend:\n",
-            "(OK):download completed.\n",
-            "\u001b[0m\n",
-            "Download Results:\n",
-            "gid   |stat|avg speed  |path/URI\n",
-            "======+====+===========+=======================================================\n",
-            "f51ab9|\u001b[1;32mOK\u001b[0m  |    52MiB/s|/content/TotoroUI/models/vae/ae.sft\n",
-            "\n",
-            "Status Legend:\n",
-            "(OK):download completed.\n",
-            "\u001b[0m\n",
-            "Download Results:\n",
-            "gid   |stat|avg speed  |path/URI\n",
-            "======+====+===========+=======================================================\n",
-            "9380cb|\u001b[1;32mOK\u001b[0m  |   229MiB/s|/content/TotoroUI/models/clip/clip_l.safetensors\n",
-            "\n",
-            "Status Legend:\n",
-            "(OK):download completed.\n",
-            " *** Download Progress Summary as of Thu Feb  6 23:30:16 2025 *** \n",
-            "=\n",
-            "[#e4a3fd 2.2GiB/4.5GiB(49%) CN:16 DL:0B]\n",
-            "FILE: /content/TotoroUI/models/clip/t5xxl_fp8_e4m3fn.safetensors\n",
-            "-\n",
-            "\n",
-            " *** Download Progress Summary as of Thu Feb  6 23:31:19 2025 *** \n",
-            "=\n",
-            "[#e4a3fd 3.9GiB/4.5GiB(86%) CN:16 DL:0B]\n",
-            "FILE: /content/TotoroUI/models/clip/t5xxl_fp8_e4m3fn.safetensors\n",
-            "-\n",
-            "\n",
-            "\u001b[0m\n",
-            "Download Results:\n",
-            "gid   |stat|avg speed  |path/URI\n",
-            "======+====+===========+=======================================================\n",
-            "e4a3fd|\u001b[1;32mOK\u001b[0m  |    32MiB/s|/content/TotoroUI/models/clip/t5xxl_fp8_e4m3fn.safetensors\n",
-            "\n",
-            "Status Legend:\n",
-            "(OK):download completed.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:root:clip missing: ['text_projection.weight']\n"
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.7/16.7 MB\u001b[0m \u001b[31m59.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m906.5/906.5 MB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m67.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m36.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m44.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m10.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m64.7 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m"
           ]
         }
       ],
@@ -213,22 +103,10 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "HFGIThAGJfSD",
-        "outputId": "b6c2f030-98d8-4d29-b177-72cea79bfe8d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "HFGIThAGJfSD"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -272,7 +150,6 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
